--- a/app/public/mobile.jade
+++ b/app/public/mobile.jade
@@ -17,7 +17,9 @@ html(lang="en")
       .row
         .col-xs-12.col-sm-8.col-sm-offset-4.col-md-6.col-md-offset-3
           h2.text-center
-            a(href="/landing") GraphDocs
+            a#splash(href="/landing")
+              b Graph
+              span(class="light") Docs
           ul.nav.nav-tabs(id="main-tabs")
             li
               a(data-target="#node", role="tab", data-toggle="tab") Node
@@ -32,9 +34,9 @@ html(lang="en")
                   textarea.form-control(id="node-description", placeholder="Description")
                 .form-group
                   input.form-control(type="text", id="node-tags", placeholder="Tags separated by commas")
+                button.btn.btn-primary(type="button" id="add-connection-node") Create & Connect
                 button.btn.btn-success(type="button" id="add-node") Create
-                button.btn.btn-default(type="button" id="cancel-node") Cancel
-                button.btn.btn-default(type="button" id="add-connection-node") +Connection
+                button.btn.btn-default(type="button" id="cancel-node") Cancel     
             .tab-pane.active(id="connection")
               form(role="form")
                 .form-group.input-group
@@ -47,9 +49,9 @@ html(lang="en")
                 #accordion.form-group
                   #panel3.panel
                       .panel-heading
-                        h4.panel-title
+                        span.panel-title
                           a(data-toggle='collapse', data-parent='#accordion', href='#details')
-                            | Add details
+                            | + Add details
                       #details.panel-collapse.collapse
                         .form-group
                           textarea.form-control(id="connection-description", placeholder="Description")
