--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -290,7 +290,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 #navbar-menu-title {
-  width: calc(~"100% - 340px");
+  width: calc(~"100% - 420px");
   overflow: hidden;
 }
 
@@ -313,7 +313,9 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 #menu-bar .nav-pills {
   a{
-    padding: 5px 10px;
+    padding: 5px 15px;
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa;
   }
 
   float: left;
@@ -367,7 +369,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .navbar-brand, .navbar-text  {
-  padding: 5px;
+  padding: 5px 15px;
   height: auto;
   margin: 0px;
 }
