get selected working

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -24,7 +24,9 @@
 }
 
 .node.selected .node-title-body {
-  border: 1px solid @stroke-color;
+  -webkit-box-shadow: 0px 0px 30px 0px rgba(116,221,252,1);
+  -moz-box-shadow: 0px 0px 30px 0px rgba(116,221,252,1);
+  box-shadow: 0px 0px 30px 0px rgba(116,221,252,1);
 }
 
 .node-title-body {
