--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -276,6 +276,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 #add-node-form {
   width: 255px;
+  textarea {
+    width: 227px;
+    margin-top: 8px;
+  }
 }
 
 .edit-details-form input[type="text"], .edit-details-form button[type="button"] {
