--- a/app/public/mobile.jade
+++ b/app/public/mobile.jade
@@ -40,7 +40,7 @@ html(lang="en")
             .tab-pane.active(id="connection")
               form(role="form")
                 .form-group.input-group
-                  input.form-control(type="text", id="source-node-name", placeholder="Source Node")
+                  input.form-control(type="text", id="source-node-name", placeholder="Select Source Node")
                   span.input-group-btn
                       button.btn.btn-default#source-caret(type='button') 
                         i.fa.fa-caret-down
@@ -61,7 +61,7 @@ html(lang="en")
                         .form-group
                           input.form-control(type="text", id="connection-tags", placeholder="Tags separated by commas")
                 .form-group.input-group
-                    input.form-control(type="text", id="destination-node-name", placeholder="Target Node")
+                    input.form-control(type="text", id="destination-node-name", placeholder="Select Target Node")
                     span.input-group-btn
                         button.btn.btn-default#target-caret(type='button') 
                           i.fa.fa-caret-down
