--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -71,6 +71,7 @@
   font: 15px sans-serif;
   text-anchor: middle;
   fill: #fff;
+  cursor: pointer;
   text-shadow: 0 1px 0 #333, 1px 0 0 #333, 0 -1px 0 #333, -1px 0 0 #333;
 }
 
@@ -300,7 +301,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   position: relative;
   //left: calc(~"50% - 75px");
   left: 0;
-  width: 150px;
+  width: 600px;
   outline: none;
   background: transparent;
   color: black;
