--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -1,7 +1,7 @@
 nav.navbar.navbar-default#menu-bar(role="navigation")
   .container-fluid
     .navbar-header
-      a.navbar-brand(href="") GraphDocs
+      a.navbar-brand(href="http://www.graphdocs.com") GraphDocs
       ul.nav.nav-pills
         li
           a#new-doc-button(href="#", data-toggle="modal", data-target="#new-doc-modal")
