--- a/app/public/mobile.jade
+++ b/app/public/mobile.jade
@@ -17,7 +17,7 @@ html(lang="en")
       .row
         .col-xs-12.col-sm-8.col-sm-offset-4.col-md-6.col-md-offset-3
           h2.text-center
-            a#splash(href="/landing")
+            a#splash(href="http://www.graphdocs.com")
               b Graph
               span(class="light") Docs
           ul.nav.nav-tabs(id="main-tabs")
