--- a/app/public/mobile.jade
+++ b/app/public/mobile.jade
@@ -29,7 +29,7 @@ html(lang="en")
             .tab-pane(id="node")
               form(role="form")
                 .form-group
-                  input.form-control(type="text", id="node-name", placeholder="Node Name")
+                  input.form-control.name-input(type="text", id="node-name", placeholder="Node Name")
                 .form-group
                   textarea.form-control(id="node-description", placeholder="Description")
                 .form-group
@@ -40,28 +40,28 @@ html(lang="en")
             .tab-pane.active(id="connection")
               form(role="form")
                 .form-group.input-group
-                  input.form-control(type="text", id="source-node-name", placeholder="Select Source Node")
+                  input.form-control.name-input(type="text", id="source-node-name", placeholder="Select Source Node")
                   span.input-group-btn
                       button.btn.btn-default#source-caret(type='button') 
                         i.fa.fa-caret-down
                 .form-group.input-group
-                  input.form-control(type="text", id="connection-name", placeholder="Connection Type")
+                  input.form-control.name-input(type="text", id="connection-name", placeholder="Connection Type")
                   span.input-group-btn
                       button.btn.btn-default#connection-caret(type='button') 
                         i.fa.fa-caret-down
                 #accordion.form-group
-                  #panel3.panel
+                  #conn-details.panel
                       .panel-heading
                         span.panel-title
                           a(data-toggle='collapse', data-parent='#accordion', href='#details')
                             | + Add details
                       #details.panel-collapse.collapse
                         .form-group
-                          textarea.form-control(id="connection-description", placeholder="Description")
+                          textarea.form-control.name-input(id="connection-description", placeholder="Description")
                         .form-group
                           input.form-control(type="text", id="connection-tags", placeholder="Tags separated by commas")
                 .form-group.input-group
-                    input.form-control(type="text", id="destination-node-name", placeholder="Select Target Node")
+                    input.form-control.name-input(type="text", id="destination-node-name", placeholder="Select Target Node")
                     span.input-group-btn
                         button.btn.btn-default#target-caret(type='button') 
                           i.fa.fa-caret-down
