Firefox bug fix + mouseover below fix

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -12,7 +12,6 @@
 
 .node {
   transition: opacity .5s ease-in-out;
-  cursor: pointer;
 }
 
 .node.dim {
@@ -37,12 +36,16 @@
   -webkit-hyphens: auto;
   -moz-hyphens: auto;
   hyphens: auto;
+
+  height: auto;
 }
 
 .node-info-body, .connection-info-body {
   background: white;
   display: none;
   color: gray;
+  cursor: pointer;
+  height: auto;
 }
 
 .pad {
@@ -69,6 +72,7 @@
   font: 15px sans-serif;
   text-anchor: middle;
   fill: #fff;
+  cursor: pointer;
   text-shadow: 0 1px 0 #333, 1px 0 0 #333, 0 -1px 0 #333, -1px 0 0 #333;
 }
 
