--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -276,6 +276,11 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   display: inline;
 }
 
+#filter-panel {
+ max-height: 250px; 
+ overflow-y: scroll;
+}
+
 .edit-details-form input[type="text"], .edit-details-form button[type="button"] {
   padding: 2px 5px;
   height: auto;
