--- a/app/templates/filters_template.html
+++ b/app/templates/filters_template.html
@@ -5,9 +5,13 @@
     </h4>
   </div>
 
-  <div class="panel-body">
+  <div class="panel-body" id="filter-panel">
     <p>
       <ul class="list-group">
+          <li class="list-group-item list-group-item-info">
+            <input type='checkbox' class="filter-toggle-all" checked='false'>
+            <b>Toggle all</b>
+          </li>
         <% _.each(_.keys(tagTable), function(tag) { %>
           <li class="list-group-item">
             <% if(tagTable[tag]) { %>
@@ -27,4 +31,4 @@
 
 </div>
 
-<button id='filter-button' class="btn btn-primary" type="button">Apply Filter</button>
+<button class="btn btn-primary" id="filter-button" type="button">Apply Filter</button>
