--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -368,6 +368,8 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 .navbar {
   margin-bottom: 0;
   min-height: 0;
+  max-height: 32px;
+  overflow: hidden;
   background: @white;
   border: 0;
   border-radius: 0;
