implement saving of workspaces

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -274,6 +274,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 .toolbar.bottom {
   position: absolute;
   bottom: 40px;
+  .btn {
+    margin-right:3px;
+    margin-left: 3px;
+  }
 }
 
 .controls {
