include basic atwho packages

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -7,6 +7,7 @@ block content
     .loading-container
       i.fa.fa-circle-o-notch.fa-spin.fa-5x
     .toolbar.controls
+      textarea#inputor
       .navbar-left.navbar-form
         form#search-form
           .form-group
