kind of working. not great

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -375,6 +375,10 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   border-radius: 0;
 }
 
+.node-toolbar {
+  font-size: 15px;
+}
+
 .navbar-brand, .navbar-text  {
   padding: 5px 15px;
   height: auto;
