--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -1,5 +1,11 @@
-<% if((attributes.description != null && attributes.description != "") || _.some(attributes.tags)){ %>
   <div class="pad">
+      <div class="node-toolbar">
+        <i class="fa fa-thumb-tack node-fix"></i>
+        <i class="fa fa-plus-circle node-add-related"></i>
+<!--         <i class="fa fa-archive"></i>
+ -->    <i class="fa fa-link node-connect"></i>
+        <i class="fa fa-trash node-archive"></i>
+      </div>
       <div>
       <%= attributes.description %>
       </div>
@@ -10,4 +16,3 @@
         </div>
       <% } %>
   </div>
-<% } %>
