Buttoned them up. Bootstrap button group was giving me a blank toolbar and looked pretty bad when I tried to fix it (by removing the bootstrap classes)

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -416,3 +416,21 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 .bootstrap-colorpalette .btn-color:hover {
     border: 1px solid #000;
 }
+
+.node-toolbar button {
+  padding:  2px 6px;
+  color: gray;
+  border: 0;
+  background: none;
+  outline: none;
+}
+
+.node-toolbar button:active {
+  background:#efefef;
+}
+
+.node-toolbar {
+  text-align: middle;
+  padding: 3px 5px;
+  border-bottom: 1px solid gray;
+}
