improved responsive nav

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -300,6 +300,11 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   margin: 2px 0px;
 }
 
+.main-nav {
+  padding: 0;
+  border: 0;
+}
+
 #menu-title {
   position: relative;
   outline: none;
@@ -307,7 +312,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   color: black;
   border: 0;
   cursor: pointer;
-  padding: 7px;
+  padding: 6px;
 }
 
 #menu-title:focus {
