--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -8,7 +8,7 @@ nav.navbar.navbar-default(role='navigation')
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='http://graphdocs.com') GraphDocs
-          form.navbar-form.navbar-left
+          form.navbar-form.navbar-left.main-nav
             .form-group
               input#menu-title(type="text" placeholder="Untitled Doc" data-toggle="tooltip" data-placement="bottom" title="Rename Doc")
         // Collect the nav links, forms, and other content for toggling
