--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -29,6 +29,7 @@
 }
 
 .node-title-body {
+  text-align: center;
   background: white;
   -ms-word-break: break-all;
   word-break: break-all;
@@ -164,7 +165,7 @@ svg {
 }
 
 .uptwo {
-  margin-top: -2px;
+  margin-top: -15px;
 }
 
 input[type="text"]::-webkit-input-placeholder { /* WebKit browsers */
@@ -223,6 +224,8 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .close {
   outline: none;
+  font-size: 40px;
+  opacity: 0.4;
 }
 
 #details-container {
@@ -301,6 +304,20 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .navbar-header {
   width: 100%;
+}
+
+.search-title {
+  padding: 12px 16px;
+  font-size: 16pt;
+}
+
+.modal-body {
+  max-height: 600px; // #TODO make this relative to the window height.
+  overflow-y: scroll;
+}
+
+.panel {
+  border: 0;
 }
 
 #menu-title {
