add accessible workspaces to the menubar

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -350,6 +350,13 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   }
 }
 
+.workspaces-list {
+  .btn-danger{
+    position: relative;
+    bottom: 5px;
+  }
+}
+
 // Overriding Bootstrap defaults
 
 .btn {
