--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -10,6 +10,9 @@ nav.navbar.navbar-default#menu-bar(role="navigation")
           a#open-doc-button(href="#")
             | Open
         li
+          a#workspaces-button(href="", data-toggle="modal", data-target="#workspaces-modal")
+            | Workspaces
+        li
           a#filter-modal-toggle(href="#", data-toggle="modal", data-target="#filters_template")
             | Filter
         li
