--- a/app/templates/workspaces_menu_modal.html
+++ b/app/templates/workspaces_menu_modal.html
@@ -2,7 +2,7 @@
   <% _.each(workspaces, function(id){ %>
     <a href=<%= docId %>#<%= id %> target="_blank" class="list-group-item">
       <%= id %>
-      <button type="button" class="btn btn-danger btn-sm pull-right center-block">
+      <button type="button" class="btn btn-danger btn-sm pull-right center-block delete-workspace", data-id=<%= id %>>
         <i class="fa fa-trash-o"></i>
       </button>
     </a>
