prefetch documents for the landing page

--- a/app/public/landing.jade
+++ b/app/public/landing.jade
@@ -6,7 +6,8 @@ head
     link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/landing.css', rel='stylesheet')
     script(type='text/javascript', data-main="landing", src="/assets/libs/requirejs/require.js") //loads landing.js
-
+    script.
+        window.prefetch =!{JSON.stringify(docs)};
     base(href="/")
 
   body
