--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -376,7 +376,7 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .node-toolbar {
-  font-size: 15px;
+  font-size: 17px;
 }
 
 .navbar-brand, .navbar-text  {
@@ -418,19 +418,23 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
 
 .node-toolbar button {
-  padding:  2px 6px;
+  padding:  2px 4px;
   color: gray;
   border: 0;
   background: none;
   outline: none;
 }
 
+.node-toolbar button:hover {
+  color: #3366BB;
+}
+
 .node-toolbar button:active {
-  background:#efefef;
+  color: #0645AD;
 }
 
 .node-toolbar {
   text-align: middle;
-  padding: 3px 5px;
+  padding: 3px 3px 3px 6px;
   border-bottom: 1px solid gray;
 }
