switch back to a single tooltip template file

--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -1,7 +1,9 @@
 <div class="node-toolbar">
+  <% if(constructor.name === "NodeModel"){ %>
   <button type="button"><i class="fa fa-thumb-tack node-fix"></i></button>
   <button type="button"><i class="fa fa-plus-circle node-add-related"></i></button>
   <button type="button"><i class="fa fa-link node-connect"></i></button>
+  <% } %>
   <button type="button"><i class="fa fa-archive node-archive"></i></button>
 </div>
 <% if((attributes.description != null && attributes.description != "") || _.some(attributes.tags)){ %>
