implement unfixing on toolbar

--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -1,6 +1,6 @@
 <div class="node-toolbar">
   <% if(constructor.name === "NodeModel"){ %>
-  <button type="button" class="node-fix"><i class="fa fa-thumb-tack"></i></button>
+  <button type="button" class="node-fix" data-id=<%=attributes._id%>><i class="fa fa-thumb-tack"></i></button>
   <button type="button" class="node-expand" data-id=<%=attributes._id%>><i class="fa fa-expand"></i></button>
   <button type="button" class="node-connect" data-id=<%=attributes._id%>><i class="fa fa-link"></i></button>
   <% } %>
