--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -32,6 +32,8 @@
 
 .node-title-body {
   // text-align: center;
+  background: transparent;
+  color: #222;
   // background: rgba(256,256,256,0.4);
   border-radius: 4px;
   -ms-word-break: break-all;
