--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -25,10 +25,9 @@
   stroke: orange;
 }
 
-.node.selected .node-title-body {
-  -webkit-box-shadow: 0px 0px 30px 0px rgba(116,221,252,1);
-  -moz-box-shadow: 0px 0px 30px 0px rgba(116,221,252,1);
-  box-shadow: 0px 0px 30px 0px rgba(116,221,252,1);
+.node.selected .node-connector {
+  stroke-width: 1px;
+  stroke: @selected-color;
 }
 
 .node-title-body:hover {
