fix bug with node-title hover

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -34,11 +34,14 @@
   background: white;
 }
 
+.filled-white {
+  background: white !important;
+}
+
 .node-title-body {
   // text-align: center;
   background: transparent;
   color: #222;
-  // background: rgba(256,256,256,0.4);
   -ms-word-break: break-all;
   word-break: break-all;
 
