--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -6,9 +6,12 @@
   <% } %>
   <button type="button" class="node-archive" data-id=<%=attributes._id%>><i class="fa fa-archive"></i></button>
 </div>
-<% if((attributes.description != null && attributes.description != "") || _.some(attributes.tags)){ %>
+<% if((attributes.description != null && attributes.description != "") || _.some(attributes.tags) || _.some(attributes.url)){ %>
   <div class="pad">
     <div>
+    <% if(_.some(attributes.url)){ %>
+      <a href=<%= attributes.url %> target="_blank" class="pull-right"><i class="fa fa-external-link"></i></a>
+    <% } %>
     <%= attributes.description %>
     </div>
     <% if(_.some(attributes.tags)){ %>
