Fixes: Pin icon now has colour Tags don't appear duplicated in datatooltip Pinning/Unpinning functional without delay Doubleclicking a node doesn't unpin it (it edits it)

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -25,6 +25,10 @@
   stroke: orange;
 }
 
+.node.fixed .node-fix {
+  color: @fixed-color;
+}
+
 .node.selected .node-connector {
   stroke-width: 1px;
   stroke: @selected-color;
