add gulp and compile less

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -1,4 +1,8 @@
+@bootstrap-root:  "../libs/bootstrap/less/";
+
+@import "@{bootstrap-root}bootstrap";
 @import "colors";
+@import "typeahead.css";
 
 @node-color: white;
 @connection-color: black;
