Allows a user to undo the last archive/delete

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -33,4 +33,7 @@ block content
         i.glyphicon.glyphicon-minus
     #trash-bin.controls
       i.fa.fa-archive
+    #last-action
+      span#last-action-message
+      a#undo-last-action Undo
   .data-tooltip-container
