Nodes hover more reliably Circle of node and place to the right of it is now "part of the node" in terms of events such as mouseover

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -54,11 +54,14 @@
   height: auto;
 }
 
+.node, .connection {
+  cursor: pointer;
+}
+
 .node-info-body, .connection-info-body {
   background: @white;
   display: none;
   color: gray;
-  cursor: pointer;
   height: auto;
   font-size: 14px;
   line-height: normal;
@@ -66,6 +69,10 @@
 
 .pad {
   padding: 6px;
+}
+
+.node-title-body.shown {
+  background: @white;
 }
 
 .node-info-body.shown, .connection-info-body.shown {
