--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -21,12 +21,16 @@
 }
 
 .node.fixed .node-connector {
-  stroke-width: 1px;
+  stroke-width: 2px;
   stroke: orange;
 }
 
 .node.fixed .node-fix {
   color: @fixed-color;
+}
+
+.node.image .node-title-body .pad {
+  padding-left: 10px;
 }
 
 .node.selected .node-connector {
