--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -1,7 +1,8 @@
 <div class="node-toolbar">
   <% if(constructor.name === "NodeModel"){ %>
   <button type="button" class="node-fix" data-id=<%=attributes._id%>><i class="fa fa-thumb-tack"></i></button>
-  <button type="button" class="node-expand" data-id=<%=attributes._id%>><i class="fa fa-expand"></i></button>
+  <button type="button" class="node-expand" data-id=<%=attributes._id%>><i class="fa fa-expand"></i><span class="node-expand-count"></span></button>
+
   <button type="button" class="node-connect" data-id=<%=attributes._id%>><i class="fa fa-link"></i></button>
   <% } %>
   <button type="button" class="node-archive" data-id=<%=attributes._id%>><i class="fa fa-archive"></i></button>
