buttons for toggling grid and graph view

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -22,6 +22,10 @@ block content
           button.btn.btn-primary(type="submit")
             i.fa.fa-plus
     .toolbar.bottom.right.controls
+      button#grid-view-button.btn.btn-primary
+        div Grid
+      button#graph-view-button.btn.btn-primary
+        div Graph
       button#save-workspace-button.btn.btn-primary
         div Save Workspace
       button#sharing-button.btn.btn-primary
