--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -12,7 +12,7 @@ block content
             input#search-input.form-control(type="text", name='search-term' placeholder="Search...")
           button.btn.btn-primary(type="button")
             i.fa.fa-search
-        button#sidebar-toggle.btn.btn-default
+        button#sidebar-toggle.btn.btn-default(title="toggle sidebar")
             i.fa.fa-arrows-h
     .toolbar.right.controls
       .navbar-right.navbar-form
@@ -30,10 +30,10 @@ block content
       button#sharing-button.btn.btn-primary
         div Share GraphDoc
     #zoom-controls.btn-group-vertical.controls
-      button#zoom-in-button.btn.btn-primary
+      button#zoom-in-button.btn.btn-primary(title="Zoom In")
         i.glyphicon.glyphicon-plus
-      button#zoom-out-button.btn.btn-primary
+      button#zoom-out-button.btn.btn-primary(title="Zoom Out")
         i.glyphicon.glyphicon-minus
-    #trash-bin.controls
+    #trash-bin.controls(title="Drag a node here to Archive it")
       i.fa.fa-archive
   .data-tooltip-container
