--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -1,10 +1,10 @@
 <div class="node-toolbar">
   <% if(constructor.name === "NodeModel"){ %>
-  <button type="button" class="node-fix" data-id=<%=attributes._id%>><i class="fa fa-thumb-tack"></i></button>
-  <button type="button" class="node-expand" data-id=<%=attributes._id%>><i class="fa fa-expand"></i></button>
-  <button type="button" class="node-connect" data-id=<%=attributes._id%>><i class="fa fa-link"></i></button>
+  <button type="button" title="Pin node position" class="node-fix" data-id=<%=attributes._id%>><i class="fa fa-thumb-tack"></i></button>
+  <button type="button" title="Show archived neighboring nodes" class="node-expand" data-id=<%=attributes._id%>><i class="fa fa-expand"></i></button>
+  <button type="button" title="Add connection from this node" class="node-connect" data-id=<%=attributes._id%>><i class="fa fa-link"></i></button>
   <% } %>
-  <button type="button" class="node-archive" data-id=<%=attributes._id%>><i class="fa fa-archive"></i></button>
+  <button type="button" title="Archive (Hide)" class="node-archive" data-id=<%=attributes._id%>><i class="fa fa-archive"></i></button>
 </div>
 <% if((attributes.description != null && attributes.description != "") || _.some(attributes.tags) || _.some(attributes.url)){ %>
   <div class="pad">
