only use one share button to save a workspace. Naming is not yet implemented

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -296,6 +296,12 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
     margin-right:3px;
     margin-left: 3px;
   }
+
+  .share-holder {
+    bottom: 20px;
+    right: 15px;
+    position: absolute !important;
+  }
 }
 
 .controls {
