--- a/app/templates/workspaces_menu_modal.html
+++ b/app/templates/workspaces_menu_modal.html
@@ -1,14 +1,10 @@
 <ul class="workspaces-list list-group">
-  <% _.each(workspaces, function(id){ %>
-    <a href=<%= docId %>#<%= id %> target="_blank" class="list-group-item">
-      <%if(name.length>0){%>
-        <%= name %>
-      <% }else{ %>
-        <%= id %>
-      <% } %>
-      <button type="button" class="btn btn-danger btn-sm pull-right center-block delete-workspace", data-id=<%= id %>>
+  <% _.each(workspaces, function(workspace){ if(workspace._id > 0 && workspace.name.length>0){%>
+    <a href=<%= docId %>#<%= workspace._id %> target="_blank" class="list-group-item">
+      <%= workspace.name %>
+      <button type="button" class="btn btn-danger btn-sm pull-right center-block delete-workspace", data-id=<%= workspace._id %>>
         <i class="fa fa-trash-o"></i>
       </button>
     </a>
-  <% }); %>
+  <% }}); %>
 <ul>
