implement sharing in right sidebar

--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -15,8 +15,5 @@ nav.navbar.navbar-default(role='navigation')
         #gdocs-nav.collapse.navbar-collapse
           ul.nav.navbar-nav.pull-right
             li
-              button#save-workspace-button.btn.btn-primary
-                div Save Workspace
-            li
-              button#sharing-button.btn.btn-primary
-                div Share GraphDoc
+              button#sidebar-toggle-right.btn.btn-default
+                i.fa.fa-share-alt
