--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -10,6 +10,7 @@
 @fixed-color: @orange;
 @text-color: #333;
 @controls-z-index: 1;
+@left-sidebar-z-index: @controls-z-index+1;
 
 @bottom-margin:70px;
 
@@ -189,7 +190,6 @@ svg {
 #graph {
   width: 100%;
   height: 100%;
-  right:0;
   position: fixed;
 }
 
@@ -218,14 +218,22 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
   left: 15px;
 }
 
-#sidebar {
+.sidebar {
   position: absolute;
-  left: 0;
   top: 0;
   height: 100%;
   width: 0;
   background: darken(#284552,10%);
   overflow-y: auto;
+}
+
+.sidebar.left {
+  left:0;
+  z-index: @left-sidebar-z-index;
+}
+
+.sidebar.right{
+  right:0;
 }
 
 #sidebar-toggle {
@@ -413,6 +421,14 @@ input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
 
 .form-control {
   border-radius: 0 !important;
+}
+
+.sidebar .list-group-item {
+  background-color: transparent;
+  border-radius: 0;
+  border: none;
+  color: #2C93FF;
+  cursor: pointer;
 }
 
 // Bootstrap-colorpalette
